# marvelous-databricks-course-sshtomar

./: .gitignore  README.md  command  databricks.yml  pyproject.toml
.github/: CODEOWNERS
config/: preprocessing_config.yaml
notebooks/: train_register_power_model.py
src/power_preprocess/: config.py  preprocessor.py  utils.py
src/power_preprocess/models/: __init__.py  forecaster.py
tests/: test_preprocessor.py
