[project]
name = "power-consumption-of-tetouan-city"
version = "0.0.1"
description = "Power Consumption of Tetouan City"
requires-python = ">=3.11, <3.12"
dependencies = ["mlflow==2.17.0",
                "cffi==1.17.1",
                "cloudpickle==3.1.0",
                "matplotlib==3.9.2",
                "numpy==1.26.4",
                "pandas==2.2.3",
                "psutil==6.0.0",
                "pyarrow==14.0.1",
                "scikit-learn==1.5.2",
                "lightgbm==4.5.0",
                "scipy==1.14.1",
                "databricks-feature-engineering==0.6",
                "databricks-feature-lookup==1.2.0",
                "databricks-sdk==0.32.0",
                "databricks-connect==16.0.0",
                "pydantic==2.9.2"
                ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=4.1.0"
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where =["src"]
include = ["power_consumption*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "B", "I"]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "space"
